--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "framer-motion": "^11.3.19",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -16,6 +17,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-tailwind-timeline-component": "^1.1.2",
     "sass": "^1.77.6",
     "scrollreveal": "^4.0.9",
     "slick-carousel": "^1.8.1",
